# Haruki-Event-Tracker

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  REWRITE_PLAN.md  WEB_API_CAPABILITIES.md  app.py  configs.example.py  enums.py  event_tracker.py  go.mod  go.sum  haruki-tracker-configs.example.yaml  hypercorn.toml  main.go  pyproject.toml  utils.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml  release.yml
api/: api.go  utils.go
config/: config.go
deploy/kubernetes/: README.md
deploy/kubernetes/base/: deployment.yaml  kustomization.yaml  pdb.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/overlays/api-only/: README.md  kustomization.yaml
modules/: cache_helpers.py  enums.py  logger.py  redis.py
modules/schema/: api.py  data_parser.py  sekai_api.py  tracker.py
modules/sql/: engine.py  helpers.py  tables.py
modules/tracker/: call_api.py  data_parser.py  tracker.py
scripts/: diff_go_vs_rust.sh  smoke_k8s_orbstack.sh
src/: api.rs  app.rs  config.rs  db.rs  lib.rs  logger.rs  main.rs  model.rs  privacy.rs  shutdown.rs  storage.rs  tracker.rs
src/api/: access_log.rs  cache.rs  error.rs  extract.rs  handler.rs  json.rs  limiter.rs  private_lookup.rs  realtime.rs  router.rs  state.rs  stats.rs  ws.rs  ws_ticket.rs
src/api/handler/: health.rs  leaderboard.rs  lines.rs  private.rs  ranking.rs  status.rs  trace.rs  user.rs  web.rs  world_bloom.rs
src/api/handler/leaderboard/: cloud.rs  round_metrics.rs  service.rs  web.rs
src/api/handler/leaderboard/service/: cloud.rs  snapshot.rs  trace.rs  util.rs  web.rs
src/db/: engine.rs  entity.rs  privacy.rs  query.rs  schema.rs  table_name.rs
src/db/entity/: event.rs  event_users.rs  time_id.rs  world_bloom.rs
src/db/query/: batch.rs  growth.rs  heartbeat.rs  lines.rs  ranking.rs  user.rs  web.rs  world_bloom.rs
src/model/: api.rs  db_config.rs  enums.rs  event.rs  sekai.rs  tracker.rs
src/sekai_api/: client.rs  endpoint.rs  error.rs
src/tracker/: base.rs  cache.rs  daemon.rs  diff.rs  parser.rs  state.rs
tracker/: callapi.go  eventparser.go  tracker.go  trackerbase.go
utils/gorm/: engine.go  helpers.go  tables.go
utils/model/: api.go  call_api.go  callapi.go  data_parser.go  enums.go  eventparser.go  gorm.go  tracker.go
