[package]
name = "haruki-event-tracker"
version = "3.0.0-dev"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Project Sekai event ranking tracker and query API."
default-run = "haruki-event-tracker"

[lib]
name = "haruki_event_tracker"
path = "src/lib.rs"

[[bin]]
name = "haruki-event-tracker"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# HTTP server
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = [
    "aws_lc_rs",
    "std",
    "tls12",
] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
    "compression-gzip",
    "compression-br",
    "trace",
    "catch-panic",
] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "gzip",
    "brotli",
    "stream",
] }

# ORM / DB
sea-orm = { version = "2.0.0-rc.38", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "macros",
    "with-chrono",
    "sqlite-use-returning-for-3_35",
] }
sea-query = "=1.0.0-rc.33"

# JSON
sonic-rs = "0.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = { package = "yaml_serde", version = "0.10" }

# Redis
redis = { version = "1.2", features = [
    "tokio-comp",
    "connection-manager",
] }

# Scheduling
tokio-cron-scheduler = "0.15"

# Logging / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
    "local-time",
] }

# Errors
thiserror = "2"
anyhow = "1"

# Utilities
bytes = "1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
sha2 = "0.11"
ipnet = "2"
opendal = { version = "0.57", default-features = false, features = ["services-fs", "services-s3", "services-http", "reqwest-rustls-tls", "executors-tokio", "auto-register-services", "layers-retry", "layers-timeout"] }

[dev-dependencies]
tokio = { version = "1.52", features = ["full", "test-util", "macros"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
